FIXED STUPID OVERFLOW FOOTER LIKE SCROLL ISSUE ( USE SCROLL OVER VISIBLE)

--- a/wp-content/themes/stlcc/style.css
+++ b/wp-content/themes/stlcc/style.css
@@ -51,18 +51,21 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 
 
 html {
+	top:0px;
 	font-family: 'Fira Sans', sans-serif;
 	/*font-family: sans-serif;*/
 	-webkit-text-size-adjust: 100%;
 	-ms-text-size-adjust:     100%;
 	margin:0;
-	background: #333 none repeat scroll 0% 0%;
+	background: #333 none repeat scroll 0% 0%;;
 	text-align:center;
+	/*height:100%;	*/
 
 }
 
 #page
 {
+	top:0px;
 	/*min-width: 400px; */
 	margin: 0 auto;
 	/*min-width: 600px;*/
@@ -70,11 +73,20 @@ html {
 	display: inline-block;
 	text-align: left;
 	background: #cecece;
+		overflow-y:scroll;
+
+	/*height:100%;*/
+
 }
 
 body {
+	top:0px;
 	margin: 0;
-	  text-align: center;
+	text-align: center;
+	background: red;
+	height: 100%;
+		overflow-y:scroll;
+
 }
 
 article,
@@ -594,6 +606,8 @@ svg
 {
 	fill: currentColor;
 	stroke: currentColor;
+	  transition: all 0.4s ease;
+
 }
 
 #menu-icon
@@ -602,6 +616,7 @@ svg
 	width:36px;
 	height:36px;
 	float:right;
+	transition: all 0.4s ease;
 
 }
 
@@ -823,21 +838,22 @@ a:active {
 #page 
 {
 	padding-left: 20px;
-	box-shadow: 0px 0px 20px black;
+	box-shadow: none;
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
-	overflow: visible;
+	overflow: scroll;
 	transition: all 0.4s ease;
-
+	height:100%;
 	/*z-index: 11;*/
 }
 
 #page.toggled
 {
 	left: 320px;
+	box-shadow: 0px 0px 20px black;
 	overflow: hidden;
 
 }
@@ -1017,7 +1033,7 @@ main-navigation.toggled ul :hover
 		left: 0;
 		padding-left: 20px;
 		box-shadow: none;
-		overflow: visible;
+		/*overflow: visible;*/
 
 		/*position: absolute;
 		top: 0;
